# ChessEngine

./: README.md
Chess/: CMakeLists.txt
Chess/Sources/: CMakeLists.txt  Makefile  main
Chess/Sources/inc/: Board.hpp  Calculator.hpp  Coordinates.hpp  Move.hpp  Piece.hpp
Chess/Sources/src/: Board.cpp  Calculator.cpp  Coordinates.cpp  Move.cpp  Piece.cpp  main.cpp
